src/rasqal/rasqal.h

/**
 * rasqal_world:
 *
 * Rasqal world class.
 */
typedef struct rasqal_world_s rasqal_world;
/**
 * rasqal_query:
 *
 * Rasqal query class.
 */
typedef struct rasqal_query_s rasqal_query;
typedef struct rasqal_literal_s rasqal_literal;
/**
 * rasqal_graph_pattern:
 *
 * Rasqal graph pattern class.
 */
typedef struct rasqal_graph_pattern_s rasqal_graph_pattern;
/**
 * rasqal_prefix:
 * @prefix: short prefix string
 * @uri: URI associated with the prefix.
 * @declared: Internal flag.
 * @depth: Internal flag.
 * @world: rasqal_world object
 *
 * Namespace (prefix, uri) pair.
 *
 * Includes internal flags used for marking when prefixes are
 * declared and at what XML element depth when used in XML formats.
 */
typedef struct {
  const unsigned char *prefix;
  raptor_uri* uri;
  int declared;
  int depth;
  rasqal_world* world;
} rasqal_prefix;
/**
 * rasqal_variable_type:
 * @RASQAL_VARIABLE_TYPE_NORMAL: The regular variable type.
 * @RASQAL_VARIABLE_TYPE_ANONYMOUS: Anonymous variable type.
 * @RASQAL_VARIABLE_TYPE_UNKNOWN: Internal.
 *
 * Rasqal variable types.
 *
 * ANONYMOUS can be used in queries but cannot be returned in a
 * result.
 */
typedef enum {
  RASQAL_VARIABLE_TYPE_UNKNOWN   = 0,
  RASQAL_VARIABLE_TYPE_NORMAL    = 1,
  RASQAL_VARIABLE_TYPE_ANONYMOUS = 2
} rasqal_variable_type;
/* forward reference */
struct rasqal_expression_s;
/**
 * rasqal_variable:
 * @name: Variable name.
 * @value: Variable value or NULL if unbound.
 * @offset: Internal.
 * @type: Variable type.
 * @expression: Expression when the variable is a computed SELECT expression 
 *
 * Binding between a variable name and a value.
 *
 * Includes internal field @offset for recording the offset into the
 * (internal) rasqal_query variables array.
 */
typedef struct {
  const unsigned char *name;
  rasqal_literal* value;
  int offset;
  rasqal_variable_type type;
  struct rasqal_expression_s* expression;
} rasqal_variable;
/**
 * rasqal_data_graph:
 * @uri: source URI
 * @name_uri: name of graph for %RASQAL_DATA_NAMED
 * @flags: %RASQAL_DATA_GRAPH_NAMED or %RASQAL_DATA_GRAPH_BACKGROUND
 * @world: rasqal_world object
 *
 * A source of RDF data for querying. 
 *
 * The #uri is the original source (base URI) of the content.  It may
 * also have an additional name @name_uri as long as @flags is
 * %RASQAL_DATA_NAMED
 */
typedef struct {
  raptor_uri* uri;
  raptor_uri* name_uri;
  int flags;
  rasqal_world* world;
} rasqal_data_graph;
/**
 * rasqal_literal_type:
 * @RASQAL_LITERAL_BLANK: RDF blank node literal (SPARQL r:bNode)
 * @RASQAL_LITERAL_URI: RDF URI Literal (SPARQL r:URI)
 * @RASQAL_LITERAL_STRING: RDF Literal / xsd:string (SPARQL r:Literal)
 * @RASQAL_LITERAL_BOOLEAN: Boolean literal xsd:boolean.
 * @RASQAL_LITERAL_INTEGER: Integer literal xsd:integer.
 * @RASQAL_LITERAL_DOUBLE: Double floating point literal xsd:double.
 * @RASQAL_LITERAL_FLOAT: Floating point literal xsd:float.
 * @RASQAL_LITERAL_DECIMAL: Decimal integer xsd:decimal.
 * @RASQAL_LITERAL_DATETIME: Date/Time literal xsd:dateTime.
 * @RASQAL_LITERAL_PATTERN: Pattern literal for a regex.
 * @RASQAL_LITERAL_QNAME: XML Qname literal.
 * @RASQAL_LITERAL_VARIABLE: Variable literal.
 * @RASQAL_LITERAL_UNKNOWN: Internal.
 * @RASQAL_LITERAL_FIRST_XSD: Internal.
 * @RASQAL_LITERAL_LAST_XSD: Internal.
 * @RASQAL_LITERAL_LAST: Internal.
 *
 * Types of literal.
 *
 * The order in the enumeration is significant as it encodes
 * the SPARQL term ordering conditions:
 *
 *   Blank Nodes << IRIs << RDF literals << typed literals
 *
 * which coresponds to in enum values
 *
 *   BLANK << URI << STRING << 
 *     (BOOLEAN | INTEGER | DOUBLE | FLOAT | DECIMAL | DATETIME)
 *
 *     (RASQAL_LITERAL_FIRST_XSD ... RASQAL_LITERAL_LAST_XSD)
 *
 * Not used (internal): PATTERN, QNAME, VARIABLE
 *
 * See rasqal_literal_compare() when used with flags
 * %RASQAL_COMPARE_XQUERY
 */
typedef enum {
  /* internal */
  RASQAL_LITERAL_UNKNOWN,
  RASQAL_LITERAL_BLANK,
  RASQAL_LITERAL_URI,
  RASQAL_LITERAL_STRING,
  RASQAL_LITERAL_BOOLEAN,
  RASQAL_LITERAL_INTEGER,
  RASQAL_LITERAL_DOUBLE,
  RASQAL_LITERAL_FLOAT,
  RASQAL_LITERAL_DECIMAL,
  RASQAL_LITERAL_DATETIME,
  /* internal */
  RASQAL_LITERAL_FIRST_XSD = RASQAL_LITERAL_STRING,
  /* internal */
  RASQAL_LITERAL_LAST_XSD = RASQAL_LITERAL_DATETIME,
  RASQAL_LITERAL_PATTERN,
  RASQAL_LITERAL_QNAME,
  RASQAL_LITERAL_VARIABLE,
  /* internal */
  RASQAL_LITERAL_LAST= RASQAL_LITERAL_VARIABLE
} rasqal_literal_type;
/**
 * rasqal_literal:
 * @usage: Usage count.
 * @type: Type of literal.
 * @string: String form of literal for literal types UTF-8 string, pattern, qname, blank, double, float, decimal, datetime.
 * @string_len: Length of @string.
 * @value: Alternate value content.
 * @language: Language for string literal type.
 * @datatype: Datatype for string literal type.
 * @flags: Flags for literal types
 *
 * Rasqal literal class.
 *
 */
struct rasqal_literal_s {
  int usage;
  rasqal_literal_type type;
  /* UTF-8 string, pattern, qname, blank, double, float, decimal, datetime */
  const unsigned char *string;
  unsigned int string_len;
  
  union {
    /* integer and boolean types */
    int integer;
    /* double and float */
    double floating;
    /* uri (can be temporarily NULL if a qname, see flags below) */
    raptor_uri* uri;
    /* variable */
    rasqal_variable* variable;
    /* decimal */
    rasqal_xsd_decimal* decimal;
  } value;

  /* for string */
  const char *language;
  raptor_uri *datatype;

  /* various flags for literal types:
   *  pattern  regex flags
   *  string   datatype of qname
   *  uri      qname of URI not yet expanded (temporary)
   */
  const unsigned char *flags;

  /* parent XSD type if any or RASQAL_LITERAL_UNKNOWN */
  rasqal_literal_type parent_type;

  /* world object */
  rasqal_world *world;
};
/**
 * rasqal_op:
 * @RASQAL_EXPR_AND: Expression for AND(A, B)
 * @RASQAL_EXPR_OR: Expression for OR(A, B)
 * @RASQAL_EXPR_EQ: Expression for A equals B
 * @RASQAL_EXPR_NEQ: Expression for A not equals B.
 * @RASQAL_EXPR_LT: Expression for A less than B.
 * @RASQAL_EXPR_GT: Expression for A greather than B.
 * @RASQAL_EXPR_LE: Expression for A less than or equal to B.
 * @RASQAL_EXPR_GE: Expression for A greater than or equal to B.
 * @RASQAL_EXPR_UMINUS: Expression for -A.
 * @RASQAL_EXPR_PLUS: Expression for +A.
 * @RASQAL_EXPR_MINUS: Expression for A-B.
 * @RASQAL_EXPR_STAR: Expression for A*B.
 * @RASQAL_EXPR_SLASH: Expression for A/B.
 * @RASQAL_EXPR_REM: Expression for A/B remainder.
 * @RASQAL_EXPR_STR_EQ: Expression for A string equals B.
 * @RASQAL_EXPR_STR_NEQ: Expression for A string not-equals B.
 * @RASQAL_EXPR_STR_MATCH: Expression for string A matches literal regex B with flags.
 * @RASQAL_EXPR_STR_NMATCH: Expression for string A not-matches literal regex B with flags.
 * @RASQAL_EXPR_REGEX: Expression for string A matches expression regex B with flags.
 * @RASQAL_EXPR_TILDE: Expression for binary not A.
 * @RASQAL_EXPR_BANG: Expression for logical not A.
 * @RASQAL_EXPR_LITERAL: Expression for a #rasqal_literal.
 * @RASQAL_EXPR_FUNCTION: Expression for a function A with arguments (B...).
 * @RASQAL_EXPR_BOUND: Expression for SPARQL ISBOUND(A).
 * @RASQAL_EXPR_STR: Expression for SPARQL STR(A).
 * @RASQAL_EXPR_LANG: Expression for SPARQL LANG(A).
 * @RASQAL_EXPR_LANGMATCHES: Expression for SPARQL LANGMATCHES(A, B).
 * @RASQAL_EXPR_DATATYPE: Expression for SPARQL DATATYPE(A).
 * @RASQAL_EXPR_ISURI: Expression for SPARQL ISURI(A).
 * @RASQAL_EXPR_ISBLANK: Expression for SPARQL ISBLANK(A).
 * @RASQAL_EXPR_ISLITERAL: Expression for SPARQL ISLITERAL(A).
 * @RASQAL_EXPR_CAST: Expression for cast literal A to type B.
 * @RASQAL_EXPR_ORDER_COND_ASC: Expression for SPARQL order condition ascending.
 * @RASQAL_EXPR_ORDER_COND_DESC: Expression for SPARQL order condition descending.
 * @RASQAL_EXPR_GROUP_COND_ASC: Expression for LAQRS group condition ascending.
 * @RASQAL_EXPR_GROUP_COND_DESC: Expression for LAQRS group condition descending.
 * @RASQAL_EXPR_COUNT: Expression for LAQRS select COUNT()
 * @RASQAL_EXPR_VARSTAR: Expression for LAQRS select Variable *
 * @RASQAL_EXPR_SAMETERM: Expression for SPARQL sameTerm
 * @RASQAL_EXPR_SUM: Expression for LAQRS select SUM()
 * @RASQAL_EXPR_AVG: Expression for LAQRS select AVG()
 * @RASQAL_EXPR_MIN: Expression for LAQRS select MIN()
 * @RASQAL_EXPR_MAX: Expression for LAQRS select MAX()
 * @RASQAL_EXPR_GROUP_CONCAT: Expression for LAQRS select GROUP_CONCAT()
 * @RASQAL_EXPR_UNKNOWN: Internal
 * @RASQAL_EXPR_LAST: Internal
 *
 * Rasqal expression operators.  A mixture of unary, binary and
 * tertiary operators (string matches).  Also includes casting and
 * two ordering operators from ORDER BY in SPARQL.
 */
typedef enum {
  /* internal */
  RASQAL_EXPR_UNKNOWN,
  RASQAL_EXPR_AND,
  RASQAL_EXPR_OR,
  RASQAL_EXPR_EQ,
  RASQAL_EXPR_NEQ,
  RASQAL_EXPR_LT,
  RASQAL_EXPR_GT,
  RASQAL_EXPR_LE,
  RASQAL_EXPR_GE,
  RASQAL_EXPR_UMINUS,
  RASQAL_EXPR_PLUS,
  RASQAL_EXPR_MINUS,
  RASQAL_EXPR_STAR,
  RASQAL_EXPR_SLASH,
  RASQAL_EXPR_REM,
  RASQAL_EXPR_STR_EQ,
  RASQAL_EXPR_STR_NEQ,
  RASQAL_EXPR_STR_MATCH,
  RASQAL_EXPR_STR_NMATCH,
  RASQAL_EXPR_TILDE,
  RASQAL_EXPR_BANG,
  RASQAL_EXPR_LITERAL,
  RASQAL_EXPR_FUNCTION,
  RASQAL_EXPR_BOUND,
  RASQAL_EXPR_STR,
  RASQAL_EXPR_LANG,
  RASQAL_EXPR_DATATYPE,
  RASQAL_EXPR_ISURI,
  RASQAL_EXPR_ISBLANK,
  RASQAL_EXPR_ISLITERAL,
  RASQAL_EXPR_CAST,
  RASQAL_EXPR_ORDER_COND_ASC,
  RASQAL_EXPR_ORDER_COND_DESC,
  RASQAL_EXPR_LANGMATCHES,
  RASQAL_EXPR_REGEX,
  RASQAL_EXPR_GROUP_COND_ASC,
  RASQAL_EXPR_GROUP_COND_DESC,
  RASQAL_EXPR_COUNT,
  RASQAL_EXPR_VARSTAR,
  RASQAL_EXPR_SAMETERM,
  RASQAL_EXPR_SUM,
  RASQAL_EXPR_AVG,
  RASQAL_EXPR_MIN,
  RASQAL_EXPR_MAX,
  RASQAL_EXPR_GROUP_CONCAT,
  /* internal */
  RASQAL_EXPR_LAST= RASQAL_EXPR_SAMETERM
} rasqal_op;
/**
 * rasqal_expression:
 *
 * expression (arg1), unary op (arg1), binary op (arg1,arg2),
 * literal or variable 
 */
struct rasqal_expression_s {
  int usage; /* reference count - 1 for itself */

  rasqal_op op;
  struct rasqal_expression_s* arg1;
  struct rasqal_expression_s* arg2;
  struct rasqal_expression_s* arg3; /* optional 3rd arg for EXPR_REGEX */
  rasqal_literal* literal;
  unsigned char *value; /* UTF-8 value */

  /* for extension function qname(args...) and cast-to-uri */
  raptor_uri* name;
  raptor_sequence* args;
  
  /* rasqal_world object */
  rasqal_world* world;
};
typedef struct rasqal_expression_s rasqal_expression;
/**
 * rasqal_triple:
 * @subject: Triple subject.
 * @predicate: Triple predicate.
 * @object: Triple object.
 * @origin: Triple origin.
 * @flags: Or of enum #rasqal_triple_flags bits.
 *
 * A triple pattern or RDF triple.
 *
 * This is used as a triple pattern in queries and
 * an RDF triple when generating RDF triples such as with SPARQL CONSTRUCT.
 */
typedef struct {
  rasqal_literal* subject;
  rasqal_literal* predicate;
  rasqal_literal* object;
  rasqal_literal* origin;
  unsigned int flags;
} rasqal_triple;
typedef unsigned char* (*rasqal_generate_bnodeid_handler)(rasqal_query* query, void *user_data, unsigned char *user_bnodeid);
/* RASQAL API */

/* Public functions */

RASQAL_API
rasqal_world *rasqal_new_world(void);
RASQAL_API
void rasqal_free_world(rasqal_world* world);
/* Query class */

/* Create */
RASQAL_API
rasqal_query* rasqal_new_query(rasqal_world* world, const char *name, const unsigned char *uri);
/* Destroy */
RASQAL_API
void rasqal_free_query(rasqal_query* query);
RASQAL_API
void rasqal_free_data_graph(rasqal_data_graph* dg);
RASQAL_API
void rasqal_free_expression(rasqal_expression* e);
RASQAL_API
void rasqal_free_literal(rasqal_literal* l);
RASQAL_API
rasqal_prefix* rasqal_new_prefix(rasqal_world* world, const unsigned char* prefix, raptor_uri* uri);
RASQAL_API
void rasqal_free_prefix(rasqal_prefix* p);
RASQAL_API
void rasqal_free_triple(rasqal_triple* t);
RASQAL_API
void rasqal_free_variable(rasqal_variable* v);
/**
 * rasqal_triples_source_factory:
 * @user_data: User data for triples_source_factory.
 * @user_data_size: Size Of @user_data for new_triples_source.
 * @new_triples_source: Create a new triples source - returns non-zero on failure &lt; 0 is a 'no rdf data error', &gt; 0 is an unspecified error..
 *
 * A factory that initialises #rasqal_triples_source structures
 * to returning matches to a triple pattern.
 */
typedef struct {
  void *user_data;
  size_t user_data_size;

  int (*new_triples_source)(rasqal_query* query, void *factory_user_data, void *user_data, rasqal_triples_source* rts);
} rasqal_triples_source_factory;
  

/* set the triples_source_factory */
RASQAL_API
void rasqal_set_triples_source_factory(rasqal_world* world, void (*register_fn)(rasqal_triples_source_factory *factory), void* user_data);